--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hijau">#04764E</color>
+    <color name="abu">#F2F2F2</color>
+    <color name="abu_gelap">#828282</color>
+    <color name="merah">#FF2D2D</color>
+    <color name="orange">#F98121</color>
 </resources>
