--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,14 +48,24 @@
         />
 
     <TextView
+        android:id="@+id/get_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/title"
         android:layout_marginStart="20dp"
-        android:text="@string/text1"
-        android:textColor="@color/black"
         android:layout_marginTop="60dp"
-        />
+        android:text="@string/text1"
+        android:textColor="@color/black" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/get_start"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/textbox_profile"
+        android:backgroundTint="@color/white"
+        android:text="Masuk Sebagai Pengguna"
+        android:textColor="@color/black" />
 
 
 </RelativeLayout>
