--- a/app/src/main/res/drawable/border_outline.xml
+++ b/app/src/main/res/drawable/border_outline.xml
@@ -3,7 +3,7 @@
 
 
 
-    <corners android:radius="5dp" />
-    <stroke android:color="@color/black" android:width="5dp" />
+    <corners android:radius="15dp" />
+    <stroke android:color="@color/hijau" android:width="2dp" />
 
 </shape>
