--- a/app/src/main/res/layout/activity_form_admin.xml
+++ b/app/src/main/res/layout/activity_form_admin.xml
@@ -61,7 +61,10 @@
         android:paddingVertical="15dp"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:textStyle="bold" />
+        android:maxLines="1"
+        android:lines="1"
+        android:singleLine="true"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -87,7 +90,11 @@
         android:paddingStart="25sp"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:textStyle="bold" />
+        android:inputType="textPassword"
+        android:maxLines="1"
+        android:lines="1"
+        android:singleLine="true"
+        />
 
     <Button
         android:layout_width="match_parent"
