--- a/app/src/main/res/layout/activity_form_register.xml
+++ b/app/src/main/res/layout/activity_form_register.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Form_AdminActivity"
+    tools:context=".Form_RegisterActivity"
     android:background="@color/white"
-    android:padding="20dp"  >
-
+    android:padding="20sp"
+    >
     <Button
         android:id="@+id/back"
         android:layout_width="38dp"
@@ -22,7 +22,7 @@
         android:layout_alignTop="@id/back"
         android:layout_marginTop="50dp"
         android:layout_marginStart="10sp"
-        android:text="MASUK ADMIN"
+        android:text="Daftar"
         android:textSize="32sp"
         android:textColor="@color/hijau"
         android:textStyle="bold" />
@@ -102,12 +102,21 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/password"
         android:layout_marginTop="180dp"
-        android:text="@string/login"
+        android:text="@string/daftar"
         android:textColor="@color/white"
         android:background="@drawable/border_outline"
         android:backgroundTint="@color/hijau"
         android:paddingVertical="20dp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/login"
+        android:layout_marginTop="80sp"
+        android:text="@string/masuk"
+        android:textColor="@color/black"
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
