--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -3,23 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user.FragmentProfile">
+    tools:context=".user.FragmentEditProfile">
 
     <!-- TODO: Update blank fragment layout -->
     <View
         android:id="@+id/green_top"
         android:layout_width="match_parent"
         android:layout_height="220dp"
-        android:background="#04764E"/>
+        android:background="#04764E" />
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_edit"/>
+        android:src="@drawable/ic_arrow_back"/>
 
     <View
         android:layout_width="match_parent"
@@ -37,19 +37,19 @@
         android:background="@drawable/profile_background"
         android:src="@drawable/ic_baseline_person_outline_24" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvNamaProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ivFotoProfile"
-        android:layout_marginTop="80dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
         android:text="Ujang"
+        android:textColor="@color/black"
         android:textSize="36sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+        android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,14 +61,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/textbox_profile"
+        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
         android:gravity="center"
         android:padding="10dp"
         android:text="Ujang@gmail.com"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        android:drawableStart="@drawable/ic_baseline_mail_outline_24"/>
+        android:textSize="18sp" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvNomorHP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -87,37 +87,35 @@
         android:textSize="18sp"
         android:drawableStart="@drawable/ic_baseline_phone_android_24"/>
 
-    <TextView
+    <EditText
         android:id="@+id/tvLokasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvNomorHP"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
+        android:background="@drawable/textbox_profile"
+        android:drawableStart="@drawable/ic_outline_map_24"
         android:gravity="center"
         android:padding="10dp"
         android:text="Makassar, Sudiang"
-        android:textSize="18sp"
         android:textColor="@color/black"
-        android:background="@drawable/textbox_profile"
-        android:drawableStart="@drawable/ic_outline_map_24"/>
+        android:textSize="18sp" />
 
-    <TextView
+    <Button
+        android:id="@+id/btnUbah"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="50dp"
-        android:text="PENTING \nHoax itu bahaya!"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:layout_below="@+id/tvLokasi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:background="@drawable/profile_background"
+        android:text="Ubah Profile"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
