Menambahkan halaman detail laporan

--- a/app/src/main/res/layout/activity_hasil_laporan.xml
+++ b/app/src/main/res/layout/activity_hasil_laporan.xml
@@ -8,10 +8,18 @@
     tools:context=".admin.HasilLaporanActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvLapor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
+
+<!--    <androidx.fragment.app.FragmentContainerView-->
+<!--        android:id="@+id/fragmentContainerView"-->
+<!--        android:name="com.example.hoaxnews.user.FragmentLaporan"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"/>-->
+
 
 </LinearLayout>
