--- a/app/src/main/res/layout/activity_cek_fakta.xml
+++ b/app/src/main/res/layout/activity_cek_fakta.xml
@@ -7,7 +7,7 @@
     tools:context=".user.CekFaktaActivity">
 
     <Button
-        android:id="@+id/btn_lapor_berita"
+        android:id="@+id/btnLaporBerita"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -15,13 +15,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
-        android:layout_toStartOf="@+id/btn_cek_fakta"
+        android:layout_toStartOf="@+id/btnCekFakta"
         android:textColor="@color/black"
         android:backgroundTint="@color/abu_gelap"
         android:text="Laporan Berita" />
 
     <Button
-        android:id="@+id/btn_cek_fakta"
+        android:id="@+id/btnCekFakta"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -139,11 +139,40 @@
         android:hint="Masukkan Judul Berita"
         android:inputType="textPersonName" />
 
+    <TextView
+        android:id="@+id/tvTeksFakta"
+        android:layout_width="271dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etLinkFakta"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="50dp"
+        android:text="Teks Berita"
+        android:textColor="@color/black"
+        android:textSize="18dp" />
+
+    <EditText
+        android:id="@+id/etTeksFakta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTeksFakta"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="49dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Copy Teks"
+        android:inputType="textMultiLine" />
+
     <Button
         android:id="@+id/btnKirimFakta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etLinkFakta"
+        android:layout_below="@+id/etTeksFakta"
         android:layout_alignParentStart="true"
         android:layout_marginStart="147dp"
         android:layout_marginTop="5dp"
