--- a/app/src/main/res/layout/activity_hasil_cek.xml
+++ b/app/src/main/res/layout/activity_hasil_cek.xml
@@ -8,7 +8,7 @@
     tools:context=".admin.HasilCekActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvCek"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="1dp"
