--- a/app/src/main/res/layout/card_view_design.xml
+++ b/app/src/main/res/layout/card_view_design.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="90dp"
     android:layout_margin="10dp"
     app:cardElevation="6dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -15,46 +15,48 @@
 
         <ImageView
             android:id="@+id/gambar"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="80dp"
+            android:layout_height="80dp" />
 
         <TextView
             android:id="@+id/judul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="15dp"
-            android:text="Item"
-            android:textSize="20sp"
+            android:layout_width="260dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="100dp"
+            android:text="Judul"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="60dp"
             android:text="Nama"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="30dp"
             android:text="Link"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textColor="#03A9F4"
+            android:textSize="14sp"
+            android:textStyle="italic" />
 
-        <TextView
-            android:id="@+id/desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:text="Deskripsi"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/desc"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="300dp"-->
+<!--            android:text="Desc"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
