--- a/app/src/main/res/layout/activity_form_register.xml
+++ b/app/src/main/res/layout/activity_form_register.xml
@@ -110,6 +110,7 @@
         />
 
     <TextView
+        android:id="@+id/redirect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/login"
