--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,13 +66,12 @@
         android:layout_marginTop="35dp"
         android:background="@drawable/textbox_profile"
         android:drawableStart="@drawable/ic_baseline_person_outline_24"
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="6dp"
         android:text="Masuk Sebagai Pengguna"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:textStyle="bold"
-        android:paddingHorizontal="30dp"
-        android:paddingVertical="6dp"
-        />
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/admin"
