--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,7 +9,7 @@
     <View
         android:id="@+id/green_top"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="170dp"
         android:background="#04764E"/>
 
     <View
@@ -20,25 +20,34 @@
 
     <ImageView
         android:id="@+id/ivFotoProfile"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_alignBottom="@+id/green_top"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-70dp"
         android:background="@drawable/profile_background"
         android:src="@drawable/ic_baseline_person_outline_24" />
 
+    <ImageView
+        android:id="@+id/btn_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_edit" />
+
     <TextView
         android:id="@+id/tvNamaProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ivFotoProfile"
-        android:layout_marginTop="80dp"
         android:layout_centerHorizontal="true"
-        android:text="Ujang"
+        android:layout_marginTop="80dp"
+        android:text="..."
+        android:textColor="@color/black"
         android:textSize="36sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvEmail"
@@ -54,7 +63,7 @@
         android:background="@drawable/textbox_profile"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Ujang@gmail.com"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="18sp"
         android:drawableStart="@drawable/ic_baseline_mail_outline_24"/>
@@ -71,31 +80,31 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/textbox_profile"
+        android:drawableStart="@drawable/ic_baseline_phone_android_24"
         android:gravity="center"
         android:padding="10dp"
-        android:text="081342191919"
+        android:text=""
         android:textColor="@color/black"
-        android:textSize="18sp"
-        android:drawableStart="@drawable/ic_baseline_phone_android_24"/>
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tvLokasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvNomorHP"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
+        android:background="@drawable/textbox_profile"
+        android:drawableStart="@drawable/ic_outline_map_24"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Makassar, Sudiang"
-        android:textSize="18sp"
+        android:text=""
         android:textColor="@color/black"
-        android:background="@drawable/textbox_profile"
-        android:drawableStart="@drawable/ic_outline_map_24"/>
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -105,7 +114,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="60dp"
         android:text="PENTING \nHoax itu bahaya!"
         android:textColor="@color/black"
         android:textSize="18sp"
