--- a/app/src/main/res/layout/activity_edukasi.xml
+++ b/app/src/main/res/layout/activity_edukasi.xml
@@ -7,10 +7,33 @@
     android:orientation="vertical"
     tools:context=".EdukasiActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/border_bottom"
+        android:backgroundTint="@color/hijau"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Cara Menghindari Hoax"
+        android:layout_centerHorizontal="true"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        android:layout_marginTop="25dp"
+        />
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/edukasiRV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="8sp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
