--- a/app/src/main/res/layout/single_edukasi.xml
+++ b/app/src/main/res/layout/single_edukasi.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="15dp"
     android:elevation="3dp"
     app:cardUseCompatPadding="true"
     android:background="@drawable/border_outline"
@@ -17,32 +17,48 @@
         android:id="@+id/linear"
         >
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
         <TextView
             android:id="@+id/title_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hati-hati dengan judul provokatif"
+            android:text="Title card"
             android:textStyle="bold"
-            android:textSize="18dp"
+            android:textSize="15sp"
             android:padding="14dp"
             android:textColor="@color/black"
-            android:drawableRight="@drawable/ic_drop_arrow"
-            android:drawablePadding="70dp"
             />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="10dp"
+            android:src="@drawable/ic_drop_arrow"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            />
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/expand_layout"
             android:visibility="visible"
+
             >
+
+
 
             <TextView
                 android:id="@+id/desc_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="deskripsi menu"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:layout_marginLeft="14dp"
                 android:textColor="@color/black"
                 />
