--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".user.FragmentEditProfile">
 
     <!-- TODO: Update blank fragment layout -->
@@ -27,21 +28,29 @@
         android:layout_below="@+id/green_top"
         android:background="@color/black" />
 
-    <ImageView
-        android:id="@+id/ivFotoProfile"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvFotoProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/green_top"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-70dp"
-        android:background="@drawable/profile_background"
-        android:src="@drawable/ic_baseline_person_outline_24" />
+        app:cardCornerRadius="20dp">
+
+        <ImageView
+            android:id="@+id/ivFotoProfile"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@drawable/profile_background"
+            android:src="@drawable/ic_baseline_person_outline_24" />
+
+    </androidx.cardview.widget.CardView>
 
     <EditText
         android:id="@+id/etNamaProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivFotoProfile"
+        android:layout_below="@id/cvFotoProfile"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:text="..."
