--- a/app/src/main/res/layout/fragment_local.xml
+++ b/app/src/main/res/layout/fragment_local.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".user.LocalFragment">
+    tools:context=".user.LocalFragment"
+    android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <EditText
         android:id="@+id/et_berita"
         android:layout_width="match_parent"
@@ -47,16 +55,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/local_item"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_edukasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:backgroundTint="@color/hijau"
         app:maxImageSize="40dp"
         app:tint = "@color/white"
         android:src="@drawable/ic_info"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
