--- a/app/src/main/res/layout/activity_form_user.xml
+++ b/app/src/main/res/layout/activity_form_user.xml
@@ -13,8 +13,7 @@
         android:id="@+id/back"
         android:layout_width="38dp"
         android:layout_height="38dp"
-        android:background="@drawable/ic_arrow_back"
-    />
+        android:background="@drawable/ic_arrow_back" />
 
     <TextView
         android:id="@+id/admin_text"
@@ -111,6 +110,7 @@
         />
 
     <TextView
+        android:id="@+id/daftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/login"
