--- a/app/src/main/res/layout/activity_laporan.xml
+++ b/app/src/main/res/layout/activity_laporan.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
-        android:layout_toStartOf="@+id/btn_cek_fakta"
+        android:layout_toStartOf="@+id/btnCekFakta"
         android:text="Laporan Berita" />
 
     <Button
