--- a/app/src/main/res/layout/fragment_local.xml
+++ b/app/src/main/res/layout/fragment_local.xml
@@ -7,6 +7,13 @@
     tools:context=".user.LocalFragment"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:id="@+id/pb_berita"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
