--- a/app/src/main/res/layout/activity_edukasi.xml
+++ b/app/src/main/res/layout/activity_edukasi.xml
@@ -18,6 +18,14 @@
         android:backgroundTint="@color/hijau"
         />
 
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_arrow_back" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
