--- a/app/src/main/res/layout/fragment_local_detail.xml
+++ b/app/src/main/res/layout/fragment_local_detail.xml
@@ -6,50 +6,62 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".user.LocalDetailFragment">
 
-    <TextView
-        android:id="@+id/tv_judul"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="judul"
-        android:textColor="@color/black"
-        android:textSize="24sp"/>
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="146dp">
 
-    <TextView
-        android:id="@+id/tv_sumber"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_judul"
-        app:layout_constraintStart_toStartOf="@+id/tv_judul"
-        app:layout_constraintEnd_toEndOf="@id/tv_judul"
-        android:text="sumber"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+        <TextView
+            android:id="@+id/tv_judul"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="judul"
+            android:textColor="@color/black"
+            android:textSize="24sp"/>
 
-    <ImageView
-        android:id="@+id/iv_berita"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_sumber"
-        app:layout_constraintStart_toStartOf="@+id/tv_sumber"
-        app:layout_constraintEnd_toEndOf="@id/tv_sumber"
-        android:src="@drawable/textbox_profile"/>
+        <TextView
+            android:id="@+id/tv_sumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_judul"
+            app:layout_constraintStart_toStartOf="@+id/tv_judul"
+            app:layout_constraintEnd_toEndOf="@id/tv_judul"
+            android:text="sumber"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/tv_isi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/iv_berita"
-        app:layout_constraintStart_toStartOf="@id/iv_berita"
-        app:layout_constraintEnd_toEndOf="@+id/iv_berita"
-        android:text="isi"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        <ImageView
+            android:id="@+id/iv_berita"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_sumber"
+            app:layout_constraintStart_toStartOf="@+id/tv_sumber"
+            app:layout_constraintEnd_toEndOf="@id/tv_sumber"
+            android:src="@drawable/textbox_profile"/>
+
+        <TextView
+            android:id="@+id/tv_isi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/iv_berita"
+            app:layout_constraintStart_toStartOf="@id/iv_berita"
+            app:layout_constraintEnd_toEndOf="@+id/iv_berita"
+            android:text="isi"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
