--- a/app/src/main/res/layout/local_item.xml
+++ b/app/src/main/res/layout/local_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,60 +9,62 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="140dp"
         android:padding="10dp">
 
         <TextView
             android:id="@+id/tvJudul"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/cv_gambar"
-            app:layout_constraintBottom_toTopOf="@id/tv_sumber"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:maxLines="2"
+            android:layout_marginStart="10dp"
+            android:padding="0dp"
             android:ellipsize="end"
+            android:maxLines="2"
             android:text="Judul"
+            android:textColor="@color/black"
             android:textSize="20sp"
-            android:textColor="@color/black"/>
+            app:layout_constraintBottom_toTopOf="@id/tv_sumber"
+            app:layout_constraintEnd_toStartOf="@id/cv_gambar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_sumber"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="36dp"
             android:text="sumber"
+            android:textColor="@color/hijau"
             android:textSize="16sp"
-            android:textColor="@color/hijau"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_waktu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/tv_sumber"
-            app:layout_constraintBottom_toBottomOf="@id/tv_sumber"
-            app:layout_constraintStart_toEndOf="@id/tv_sumber"
             android:layout_margin="10dp"
             android:text="waktu"
+            android:textColor="@color/abu_gelap"
             android:textSize="16sp"
-            android:textColor="@color/abu_gelap"/>
+            app:layout_constraintStart_toStartOf="@+id/tv_sumber"
+            app:layout_constraintTop_toBottomOf="@+id/tv_sumber" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_gambar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/tvJudul"
-            app:layout_constraintBottom_toBottomOf="@id/tv_sumber"
+            android:layout_width="101dp"
+            android:layout_height="98dp"
+            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:cardCornerRadius="10dp">
+            app:layout_constraintLeft_toRightOf="@id/tv_sumber"
+            app:layout_constraintTop_toTopOf="@+id/tvJudul">
 
             <ImageView
                 android:id="@+id/iv_gambarberita"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="match_parent"
                 android:src="@drawable/textbox_profile" />
 
         </androidx.cardview.widget.CardView>
