Menambahkan Fragment Beranda

--- a/app/src/main/res/layout/local_item.xml
+++ b/app/src/main/res/layout/local_item.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         android:padding="10dp">
 
         <TextView
@@ -33,33 +33,32 @@
             android:id="@+id/tv_sumber"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="36dp"
             android:text="sumber"
             android:textColor="@color/hijau"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tvJudul"
+            app:layout_constraintBottom_toTopOf="@+id/tv_waktu"
+            app:layout_constraintStart_toStartOf="@id/tvJudul" />
 
         <TextView
             android:id="@+id/tv_waktu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:text="waktu"
             android:textColor="@color/abu_gelap"
             android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/tv_sumber"
-            app:layout_constraintTop_toBottomOf="@+id/tv_sumber" />
+            app:layout_constraintStart_toStartOf="@+id/tvJudul"
+            app:layout_constraintBottom_toBottomOf="@+id/cv_gambar" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_gambar"
-            android:layout_width="101dp"
-            android:layout_height="98dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_sumber"
-            app:layout_constraintTop_toTopOf="@+id/tvJudul">
+            app:layout_constraintTop_toTopOf="@+id/tvJudul"
+            app:layout_constraintBottom_toBottomOf="@id/tv_waktu">
 
             <ImageView
                 android:id="@+id/iv_gambarberita"
