--- a/app/src/main/res/layout/activity_edukasi.xml
+++ b/app/src/main/res/layout/activity_edukasi.xml
@@ -24,7 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:src="@drawable/ic_arrow_back" />
+            android:src="@drawable/ic_arrow_back"
+            app:tint="@color/white"/>
 
     <TextView
         android:layout_width="wrap_content"
