--- a/app/src/main/res/layout/activity_form_user.xml
+++ b/app/src/main/res/layout/activity_form_user.xml
@@ -56,8 +56,8 @@
         android:background="@drawable/border_outline"
         android:drawableStart="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
-        android:hint="Masukkan Nama Anda"
         android:drawableTint="@color/hijau"
+        android:hint="Masukkan E-mail Anda"
         android:lines="1"
         android:maxLines="1"
         android:paddingHorizontal="20dp"
@@ -101,23 +101,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/password"
-        android:layout_marginTop="180dp"
-        android:text="@string/login"
-        android:textColor="@color/white"
+        android:layout_marginTop="160dp"
         android:background="@drawable/border_outline"
         android:backgroundTint="@color/hijau"
-        android:paddingVertical="20dp"
-        />
+        android:paddingVertical="10dp"
+        android:text="@string/login"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/daftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/login"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="80sp"
         android:text="@string/register"
-        android:textColor="@color/black"
-        android:layout_centerHorizontal="true"
-        />
+        android:textColor="#000000"
+        android:textColorLink="#FF03A9F4"/>
 
 </RelativeLayout>
