--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,13 +8,6 @@
     android:padding="20dp"
     android:background="@color/white" >
 
-    <Button
-        android:id="@+id/back"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
-        android:background="@drawable/ic_arrow_back"
-        />
-
     <TextView
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
@@ -69,7 +62,7 @@
         android:paddingHorizontal="30dp"
         android:paddingVertical="6dp"
         android:text="Masuk"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold" />
 
@@ -82,8 +75,9 @@
         android:background="@drawable/textbox_profile"
         android:drawableStart="@drawable/ic_baseline_person_outline_24"
         android:paddingHorizontal="30dp"
+        android:paddingVertical="6dp"
         android:text="Daftar"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold" />
 
