--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -19,7 +19,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:tint="@color/white"
         android:src="@drawable/ic_arrow_back" />
 
     <View
@@ -122,9 +126,9 @@
         android:layout_below="@+id/etLokasi"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:padding="10dp"
         android:background="@drawable/profile_background"
+        android:padding="10dp"
         android:text="Ubah Profile"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
 </RelativeLayout>
